CCS-72 refactor: JwtTokenFilter 클래스에서 비인가 API는 필터 접근 안하도록 설정